# goon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt
.github/workflows/: cmake.yml  codeql.yml
goon/: CMakeLists.txt
goon/shaders/fragment/: basic.glsl
goon/shaders/vertex/: basic.glsl
goon/src/: Goon.hpp  gnpch.cpp  gnpch.hpp
goon/src/Goon/: .Application.cpp.swp  Application.cpp  Application.hpp  Core.h  Core.hpp  Entrypoint.hpp  Input.hpp  Keycodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp
goon/src/Goon/Events/: .ApplicationEvent.hpp.swp  .Event.hpp.swp  .KeyEvent.hpp.swp  .MouseEvent.hpp.swp  ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
goon/src/Goon/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
goon/src/Goon/Renderer/: Buffer.cpp  Buffer.hpp  GraphicsContext.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
goon/src/Platform/: LinuxWindow.cpp  MacInput.cpp  MacInput.hpp  MacWindow.cpp  MacWindow.hpp  MacWindow.mm  WindowsWindow.cpp
goon/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.hpp  LinuxWindow.cpp  LinuxWindow.hpp
goon/src/Platform/Mac/: MacInput.cpp  MacWindow.cpp
goon/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  imgui_impl_opengl3.cpp
goon/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
goon/src/Tools/: io.cpp  io.hpp
goon/src/temp/: test.cpp  test.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp  sandbox_app.cpp
tests/: cppclean.sh
